--- a/src/app/customer/customer.component.scss
+++ b/src/app/customer/customer.component.scss
@@ -5,3 +5,22 @@
 .mat-form-field {
   margin-top: 16px;
 }
+
+mat-radio-group {
+  display: flex;
+  flex-direction: column;
+  margin: 2px 0;
+}
+
+mat-radio-button {
+  margin: 5px;
+}
+
+.declaration {
+  display: inline-block;
+  padding: 20px 0px;
+}
+
+.mat-checkbox-text {
+  display: flex;
+}
