--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,4 +1,15 @@
-.hello {
-  height: max-content;
-  width: auto;
+.cust {
+  margin: 10px 0;
+}
+
+.emp {
+  margin: 10px 0;
+}
+
+form {
+  margin: 10px 10px;
+}
+
+mat-card-actions {
+  margin: auto;
 }
