--- a/src/app/application/application.component.html
+++ b/src/app/application/application.component.html
@@ -52,15 +52,54 @@
       </dl>
     </mat-card-content>
     <mat-card-actions>
-      <div *ngIf="application.status === 'pending'">
-        <button mat-raised-button class="btn btn-success">Approve</button>
-        <button mat-raised-button class="btn btn-danger">Reject</button>
+      <div *ngIf="application.status === 'pending'" class="actions">
+        <button
+          mat-raised-button
+          class="btn btn-success"
+          (click)="verfiyApplication()"
+        >
+          Approve
+        </button>
+        <button
+          mat-raised-button
+          class="btn btn-danger"
+          (click)="rejectApplication()"
+        >
+          Reject
+        </button>
       </div>
-      <div *ngIf="application.status === 'rejected'">
+      <div *ngIf="application.status === 'rejected'" class="actions">
         <button mat-raised-button class="btn btn-success">Approve</button>
       </div>
       <div *ngIf="application.status === 'verified'">
-        Form
+        <mat-card>
+          <mat-card-header>
+            <mat-card-title>Gold Review</mat-card-title>
+          </mat-card-header>
+          <mat-card-content>
+            <form [formGroup]="amountForm">
+              <mat-form-field>
+                <mat-label>Gold Quality Index</mat-label>
+                <mat-select formControlName="goldQualityIndex">
+                  <mat-option value="3">3</mat-option>
+                  <mat-option value="4">4</mat-option>
+                  <mat-option value="5">5</mat-option>
+                </mat-select>
+              </mat-form-field>
+            </form>
+            <mat-spinner *ngIf="loading"></mat-spinner>
+          </mat-card-content>
+          <mat-card-actions class="actions">
+            <button
+              [disabled]="!amountForm.valid"
+              mat-raised-button
+              (click)="reviewedApplication()"
+              color="primary"
+            >
+              Submit
+            </button>
+          </mat-card-actions>
+        </mat-card>
       </div>
     </mat-card-actions>
   </mat-card>
