--- a/src/app/application/application.component.scss
+++ b/src/app/application/application.component.scss
@@ -1,3 +1,9 @@
 .application-card {
   margin: 20px 0px;
 }
+
+.actions {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
