--- a/src/app/review/review.component.html
+++ b/src/app/review/review.component.html
@@ -1,1 +1,60 @@
-<p>review works!</p>
+<div class="container">
+  <h1 class="display-2 heading">Verified Applications</h1>
+
+  <mat-form-field>
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" #input />
+  </mat-form-field>
+
+  <div class="mat-elevation-z8" *ngIf="!!dataSource">
+    <table mat-table [dataSource]="dataSource" matSort>
+      <!-- ID Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
+        <td mat-cell *matCellDef="let row">{{ row.id }}</td>
+      </ng-container>
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+        <td mat-cell *matCellDef="let row">{{ row.accHolder }}</td>
+      </ng-container>
+
+      <!-- RefID Column -->
+      <ng-container matColumnDef="refid">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Reference ID</th>
+        <td mat-cell *matCellDef="let row">{{ row.refid }}</td>
+      </ng-container>
+
+      <!-- Weight Column -->
+      <ng-container matColumnDef="weight">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Weight</th>
+        <td mat-cell *matCellDef="let row">
+          {{ row.weight }}
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr
+        mat-row
+        *matRowDef="let row; columns: displayedColumns"
+        (click)="getRecord(row)"
+      ></tr>
+
+      <!-- Row shown when there is no matching data. -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">
+          No data matching the filter "{{ input.value }}"
+        </td>
+      </tr>
+
+      <tr class="mat-row" *ngIf="!dataSource.data.length">
+        <td class="mat-cell" colspan="4">
+          No Verified Application to Show
+        </td>
+      </tr>
+    </table>
+
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+  </div>
+</div>
