--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -214,7 +214,7 @@
 
     <p>Your Reference ID is {{ refid }}</p>
 
-    <div class="container">
+    <div class="result-card">
       <div *ngIf="result === 'pending'">
         <p class="text-wrap">
           Thanks for you Cooperation , Your application has been sent to our
