--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,9 +1,9 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
-<div class="jumbotron">
+<div class="jumbotron bg-light">
   <div class="container">
-    <h1 class="display-3"><mat-icon>account_balance</mat-icon> STAR BANK</h1>
+    <h1 class="display-3"><mat-icon>account_balance</mat-icon> STAR FINANCE</h1>
     <p>
-      Welcome to Star Bank , This is the Gold loan Section of our Bank
+      Welcome to Star Finance , This is the Gold loan Section of our Bank .
     </p>
     <p></p>
   </div>
@@ -11,32 +11,52 @@
 
 <div class="container content">
   <div class="row">
-    <div class="col-12 col-sm-6 cust">
+    <div class="col-12 col-sm-6 login-card">
       <mat-card>
         <mat-card-header>
           <mat-card-title>Customer Login</mat-card-title>
         </mat-card-header>
+        <img
+          mat-card-image
+          src="../../assets/images/customer_login.jpg"
+          class="img-responsive"
+          alt="Photo of Customer"
+        />
         <mat-card-content>
           Click the Button Below for Safe and Secured Google Login
         </mat-card-content>
         <mat-card-actions>
-          <div class="login-btn">
-            <button
-              class="btn btn-block btn-social-icon btn-google"
-              (click)="signInWithGoogle()"
-            >
-              <span class="fa fa-google"> Sign in with Google</span>
-            </button>
+          <div class="row">
+            <div class="col d-flex justify-content-center">
+              <a
+                class="btn btn-outline-dark login-button"
+                (click)="signInWithGoogle()"
+              >
+                <img
+                  width="20px"
+                  class="login-image"
+                  alt="Google sign-in"
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png"
+                />
+                Login with Google
+              </a>
+            </div>
           </div>
         </mat-card-actions>
       </mat-card>
     </div>
 
-    <div class="col-12 col-sm-6 emp">
+    <div class="col-12 col-sm-6 login-card">
       <mat-card>
         <mat-card-header>
           <mat-card-title>Employee Login</mat-card-title>
         </mat-card-header>
+        <img
+          mat-card-image
+          src="../../assets/images/employee_login.png"
+          class="img-responsive"
+          alt="Photo of Employee"
+        />
         <mat-card-content>
           <form [formGroup]="loginFormGroup">
             <mat-form-field>
@@ -77,7 +97,6 @@
             </mat-error>
           </form>
           <!-- <mat-spinner
-            [style.display]="showSpinner ? 'block' : 'none'"
           ></mat-spinner> -->
         </mat-card-content>
         <mat-card-actions>
