--- a/src/app/customer/customer.component.scss
+++ b/src/app/customer/customer.component.scss
@@ -29,3 +29,12 @@ mat-radio-button {
   margin: 10px 5px;
   padding: 5px 5px;
 }
+
+.img-upload {
+  width: 100%;
+  height: auto;
+}
+
+button {
+  margin: 2px;
+}
